Gave access to the frontend system account.

--- a/dynr-pbrouting/etc/dbus-1/system.d/pbr-dbus.conf
+++ b/dynr-pbrouting/etc/dbus-1/system.d/pbr-dbus.conf
@@ -11,6 +11,10 @@
     <allow send_destination="nl.dnpa.pbr.GatewayManager"/>
   </policy>
 
+  <policy user="dynrweb">
+     <allow send_destination="nl.dnpa.pbr.GatewayManager"/>
+  </policy>
+
   <policy context="default">
     <deny send_destination="nl.dnpa.pbr.GatewayManager"/>
   </policy>
